--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: QuadrantSec PPA
+description: This is the PPA area for Sagan, Meer and other Quadrant projects!
 theme: jekyll-theme-midnight
